Fixing commits as per @cdrage comments
Signed-off-by: Mohammed Zeeshan Ahmed <mohammed.zee1000@gmail.com>

--- a/docs/dev/development.adoc
+++ b/docs/dev/development.adoc
@@ -14,7 +14,7 @@ Testing and release builds happen with the above version. Developers are advised
 
 [WARNING]
 ====
-If you are adding any features that require a higher version of golang, that the one mentioned above, please contact maintainers to check of the releasing systems can handle the newer versions. If that is ok, please ensure you update the required golang version, both here and in the files below, in your PR.
+If you are adding any features that require a higher version of golang, than the one mentioned above, please contact the maintainers in order to check if the releasing systems can handle the newer version. If that is ok, please ensure you update the required golang version, both here and in the files below, in your PR.
 
 .List of files to update for golang version
  * link:/scripts/rpm-prepare.sh[`scripts/rpm-prepare.sh`]
