--- a/docs/dev/development.adoc
+++ b/docs/dev/development.adoc
@@ -210,7 +210,7 @@ OR
 +
 For a single node `kubernetes` cluster install link:https://kubernetes.io/docs/tasks/tools/install-minikube/[`Minikube`]
 
-NOTE: Make sure that `odo`, `oc` and `kubectl` binaries are in `$PATH`. Use the clone odo directory to launch test on 3.11 and 4.* cluster. To run test 3.11 cluster locally no cluster configuration is needed, however a 4.* cluster needs to be configured before launching the test against it. The files `kubeadmin-password` and `kubeconfig` which contains cluster login details should be present in the auth directory and it should reside parallel to the `Makefile`. If it is not present in the auth directory, please create it. Then run `make configure-installer-tests-cluster` to configure the 4.* cluster.
+NOTE: Make sure that `odo`, `oc` and `kubectl` binaries are in `$PATH`. Use the clone odo directory to launch test on 3.11 and 4.* cluster. No cluster configuration is needed to run test on 3.11 cluster spin up by `Minishift` or `oc cluster up` locally, however a 4.* cluster needs to be configured before launching the test against it. The files `kubeadmin-password` and `kubeconfig` which contains cluster login details should be present in the auth directory and it should reside parallel to the `Makefile`. If it is not present in the auth directory, please create it. Then run `make configure-installer-tests-cluster` to configure the 4.* cluster.
 
 *Integration tests:*
 
@@ -357,7 +357,7 @@ There are some test environment variable that helps to get more control over the
 
 *Running integration tests on Openshift:*
 
-By default, tests are run against the `odo` binary placed in the PATH which is created by command `make`. Integration tests can be run in two (parallel and sequential) ways. To control the parallel run use environment variable `TEST_EXEC_NODES`. For example component test can be run
+Login to the cluster using cluster credentials for running test on 3.11 cluster. For example `odo login -u <user_name> -p <password> <server_URL>`. However `make configure-installer-tests-cluster` does login for running the test on 4.* cluster. By default, tests are run against the `odo` binary placed in the PATH which is created by command `make`. Integration tests can be run in two (parallel and sequential) ways. To control the parallel run use environment variable `TEST_EXEC_NODES`. For example component test can be run
 
 * To run the test in parallel, on a test cluster (By default the test will run in parallel on two ginkgo test node):
 
