--- a/docs/dev/development.adoc
+++ b/docs/dev/development.adoc
@@ -199,7 +199,7 @@ $ MINISHIFT_ENABLE_EXPERIMENTAL=y minishift start --extra-clusterup-flags "--ena
 OR
 * A `crc` environment for 4.* local cluster:
 +
-Follow link:https://github.com/code-ready/crc#documentation[crc] installation guide.
+Follow link:https://github.com/code-ready/crc#documentation[`crc`] installation guide.
 +
 OR
 * A 4.* cluster hosted remotely
@@ -210,7 +210,7 @@ OR
 +
 For a single node `kubernetes` cluster install link:https://kubernetes.io/docs/tasks/tools/install-minikube/[`Minikube`]
 
-NOTE: Make sure that `odo`, `oc` and `kubectl` binaries are in `$PATH`. Use the clone odo directory to launch test on 3.11 and 4.* cluster. No cluster configuration is needed to run test on 3.11 cluster spin up by `Minishift` or `oc cluster up` locally, however a 4.* cluster needs to be configured before launching the test against it. The files `kubeadmin-password` and `kubeconfig` which contains cluster login details should be present in the auth directory and it should reside parallel to the `Makefile`. If it is not present in the auth directory, please create it. Then run `make configure-installer-tests-cluster` to configure the 4.* cluster.
+NOTE: Make sure that `odo` and `oc` binaries are in `$PATH`. Use the cloned odo directory to launch tests on 3.11 and 4.* clusters. To communicate with `Kubernetes` cluster use `kubectl`. No cluster configuration is needed to run tests on a 3.11 cluster spun up by `Minishift` or `oc cluster up` locally. However a 4.* cluster needs to be configured before launching the tests against it. The files `kubeadmin-password` and `kubeconfig` which contain cluster login details should be present in the `auth` directory and it should reside in the same directory as `Makefile`. If it is not present in the auth directory, please create it. Then run `make configure-installer-tests-cluster` to configure the 4.* cluster.
 
 *Integration tests:*
 
@@ -357,7 +357,7 @@ There are some test environment variable that helps to get more control over the
 
 *Running integration tests on Openshift:*
 
-For running tests on a 3.11 cluster, login to the cluster using the required credentials. For example `odo login -u <user_name> -p <password> <server_URL>`. However `make configure-installer-tests-cluster` performs the login operation required to run the tests on a 4.* cluster. By default, tests are run against the `odo` binary placed in the PATH which is created by the command `make`. Integration tests can be run in two (parallel and sequential) ways. To control the parallel run use the environment variable `TEST_EXEC_NODES`. For example the component test can be run
+For running tests on a 3.11 cluster, login to the cluster using the required credentials. For example `odo login -u <user_name> -p <password> <server_URL>`. In case of 4.* cluster, `make configure-installer-tests-cluster` performs the login operation required to run the test. By default, the tests are run against the `odo` binary placed in the $PATH which is created by the command `make`. Integration tests can be run in two ways, parallel and sequential. To control the parallel run, use the environment variable `TEST_EXEC_NODES`. For example, the component test can be run as following:
 
 * To run the test in parallel, on a test cluster (By default the test will run in parallel on two ginkgo test node):
 
