--- a/docs/dev/development.adoc
+++ b/docs/dev/development.adoc
@@ -189,13 +189,20 @@ NOTE: Refer https://github.com/golang/go/wiki/LearnTesting for Go best practices
 
 === Integration and e2e tests
 
-*Prerequisites for Openshift cluster:*
+*Prerequisites for OpenShift cluster:*
 
-* A `minishift` or OpenShift environment with Service Catalog enabled:
+* A `minishift` or OpenShift 3.11 environment with Service Catalog enabled:
 +
 ----
 $ MINISHIFT_ENABLE_EXPERIMENTAL=y minishift start --extra-clusterup-flags "--enable=*,service-catalog,automation-service-broker,template-service-broker"
 ----
+OR
+* A `crc` environment for 4.* local cluster:
++
+Follow link:https://github.com/code-ready/crc#documentation[`crc`] installation guide.
++
+OR
+* A 4.* cluster hosted remotely
 
 *Prerequisites for Kubernetes cluster:*
 
@@ -203,7 +210,7 @@ $ MINISHIFT_ENABLE_EXPERIMENTAL=y minishift start --extra-clusterup-flags "--ena
 +
 For a single node `kubernetes` cluster install link:https://kubernetes.io/docs/tasks/tools/install-minikube/[`Minikube`]
 
-* `odo`, `oc` and `kubectl` binaries in `$PATH`.
+NOTE: Make sure that `odo` and `oc` binaries are in `$PATH`. Use the cloned odo directory to launch tests on 3.11 and 4.* clusters. To communicate with `Kubernetes` cluster use `kubectl`. No cluster configuration is needed to run tests on a 3.11 cluster spun up by `Minishift` or `oc cluster up` locally. However a 4.* cluster needs to be configured before launching the tests against it. The files `kubeadmin-password` and `kubeconfig` which contain cluster login details should be present in the `auth` directory and it should reside in the same directory as `Makefile`. If it is not present in the auth directory, please create it. Then run `make configure-installer-tests-cluster` to configure the 4.* cluster.
 
 *Integration tests:*
 
@@ -350,7 +357,7 @@ There are some test environment variable that helps to get more control over the
 
 *Running integration tests on Openshift:*
 
-By default, tests are run against the `odo` binary placed in the PATH which is created by command `make`. Integration tests can be run in two (parallel and sequential) ways. To control the parallel run use environment variable `TEST_EXEC_NODES`. For example component test can be run
+For running tests on a 3.11 cluster, login to the cluster using the required credentials. For example `odo login -u <user_name> -p <password> <server_URL>`. In case of 4.* cluster, `make configure-installer-tests-cluster` performs the login operation required to run the test. By default, the tests are run against the `odo` binary placed in the $PATH which is created by the command `make`. Integration tests can be run in two ways, parallel and sequential. To control the parallel run, use the environment variable `TEST_EXEC_NODES`. For example, the component test can be run as following:
 
 * To run the test in parallel, on a test cluster (By default the test will run in parallel on two ginkgo test node):
 
